manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eneo
  labels:
    app.kubernetes.io/name: eneo
